<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quản Lý Sinh Viên</string>
    <string name="hint_name">Họ tên</string>
    <string name="hint_mssv">MSSV</string>
    <string name="hint_phone">Số điện thoại</string>
    <string name="hint_address">Địa chỉ</string>
    
    <string name="btn_add">Add</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Xóa</string>
    <string name="btn_save">Lưu</string>
    <string name="btn_cancel">Hủy</string>
    <string name="btn_edit">Sửa</string>
    
    <string name="menu_add_student">Thêm sinh viên</string>
    <string name="title_add_student">Thêm Sinh Viên</string>
    <string name="title_student_detail">Chi Tiết Sinh Viên</string>
    <string name="title_student_list">Danh Sách Sinh Viên</string>
    
    <string name="error_empty_fields">Vui lòng nhập đầy đủ thông tin</string>
    <string name="error_no_selection">Vui lòng chọn sinh viên để cập nhật</string>
    <string name="error_all_fields_required">Vui lòng nhập đầy đủ thông tin</string>
    
    <string name="success_added">Đã thêm sinh viên</string>
    <string name="success_updated">Đã cập nhật thông tin</string>
    <string name="success_deleted">Đã xóa sinh viên</string>
    
    <string name="confirm_delete">Bạn có chắc muốn xóa sinh viên này?</string>
    <string name="confirm_delete_title">Xác nhận xóa</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
</resources>
